objects/vlocity_cmt__Catalog__c.object
<CustomObject>
    <description>A catalog is a container of one or more items such as products. Catalogs can be contained within other catalogs forming a hierarchical structure for organizing the contained items.</description>
    <fields>
        <fullName>vlocity_cmt__CatalogCode__c</fullName>
        <description>Any ID the customer wants to add.</description>
        <label>Catalog Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this catalog. Used to identify the catalog across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique catalog identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsCatalogRoot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>How to ID the top of the catalog chain since it goes through intersection table</description>
        <label>Is Catalog Root</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceType__c</fullName>
        <inlineHelpText>What was the source of the catalog.  Like source control.</inlineHelpText>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal - Original Source</fullName>
                </value>
                <value>
                    <fullName>Internal - Replicated</fullName>
                </value>
                <value>
                    <fullName>External - Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VendorAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Catalogs</relationshipLabel>
        <relationshipName>Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Catalog</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__CatalogCode__c</columns>
        <columns>vlocity_cmt__IsCatalogRoot__c</columns>
        <columns>vlocity_cmt__StartDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__MasterCatalogs</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__CatalogCode__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__StartDateTime__c</columns>
        <columns>vlocity_cmt__EndDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__IsCatalogRoot__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Master Catalogs</label>
    </listViews>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__End_After_Start</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EndDateTime__c  &lt;  vlocity_cmt__StartDateTime__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EndDateTime__c</errorDisplayField>
        <errorMessage>End Date Time must be greater than Start Date Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Start_Before_End</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__StartDateTime__c  &gt;  vlocity_cmt__EndDateTime__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__StartDateTime__c</errorDisplayField>
        <errorMessage>Start Date Time must be less than End Date Time</errorMessage>
    </validationRules>
</CustomObject>